[gd_scene load_steps=4 format=3 uid="uid://wdg5v4nsc5sg"]

[ext_resource type="Script" path="res://Scripts/Ground.gd" id="1_dw6fe"]
[ext_resource type="Texture2D" uid="uid://mte1c26d1fxf" path="res://Sprites/ground.png" id="1_ke2u3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u5r7"]
size = Vector2(294, 20)

[node name="Ground" type="Node2D"]
z_index = 1
script = ExtResource("1_dw6fe")

[node name="Ground1" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="Ground" type="Sprite2D" parent="Ground1"]
position = Vector2(21, 0)
scale = Vector2(1.75, 1)
texture = ExtResource("1_ke2u3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(21, -18)
shape = SubResource("RectangleShape2D_0u5r7")

[node name="Ground2" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="Ground" type="Sprite2D" parent="Ground2"]
position = Vector2(315, 0)
scale = Vector2(1.75, 1)
texture = ExtResource("1_ke2u3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(315, -18)
shape = SubResource("RectangleShape2D_0u5r7")

[connection signal="body_entered" from="Ground1" to="." method="_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_body_entered"]
